<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/mainImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/editingTab"
            android:contentDescription="@string/selected_image"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/select_an_image_to_edit"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:src="@drawable/ic_image" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/userText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/aldrich"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logo"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/editingTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addLogo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/add_logo" />

            <Button
                android:id="@+id/addText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/add_text" />
        </LinearLayout>
    </RelativeLayout>
</layout>